--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,1 +1,20 @@
+body {
+    font-size: 100%;
+}
 
+.container {
+    width: 768px;
+    margin: 50px auto;
+}
+
+.door-container {
+    margin-top: 50px;
+    margin-left: -39px;
+    display: flex;
+}
+
+.door {
+    img {
+        display: block;
+    }
+}
