Extract new game button into a widget

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -7,6 +7,10 @@ body {
     margin: 50px auto;
 }
 
+.new-game {
+    display: inline;
+}
+
 .door-container {
     margin-top: 50px;
     margin-left: -39px;
