--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,6 +1,30 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 100%;
+    font-weight: 500;
+}
+
+a,
+button,
+input[type="submit"] {
+    &,
+    &:visited {
+        background: transparent;
+        color: #000;
+        text-decoration: none;
+        border: 4px solid #000;
+        border-radius: 2px;
+        padding: 4px 12px;
+        margin: -8px 0;
+    }
+
+    &:hover {
+        background: #f0f0f0;
+    }
+
+    &:active {
+        background: #d6d6d6;
+    }
 }
 
 .container {
@@ -13,7 +37,7 @@ body {
 }
 
 .door-container {
-    margin-top: 50px;
+    margin-top: 3em;
     margin-left: -39px;
     display: flex;
 }
