--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -9,9 +9,9 @@ button,
 input[type="submit"] {
     &,
     &:visited {
+        text-decoration: none;
         background: transparent;
         color: #000;
-        text-decoration: none;
         border: 4px solid #000;
         border-radius: 2px;
         padding: 4px 12px;
@@ -19,11 +19,11 @@ input[type="submit"] {
     }
 
     &:hover {
-        background: #f0f0f0;
+        background: #f6f6f6;
     }
 
     &:active {
-        background: #d6d6d6;
+        background: #ddd;
     }
 }
 
