--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -29,7 +29,18 @@ input[type="submit"] {
 
 .container {
     width: 768px;
-    margin: 50px auto;
+    margin: 50px auto 0;
+
+    #page-games-show &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        z-index: -1;
+        border-top: 4px solid #000;
+        margin-top: -4px;
+    }
 }
 
 .new-game {
@@ -45,5 +56,13 @@ input[type="submit"] {
 .door {
     img {
         display: block;
+    }
+
+    &:after {
+        content: "";
+        display: block;
+        height: 4px;
+        margin-top: -4px;
+        background-color: #fff;
     }
 }
