Move play button
So that on the next page user's cursor is between the text and the doors.

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -41,6 +41,10 @@ input[type="submit"] {
         border-top: 4px solid #000;
         margin-top: -4px;
     }
+
+    #page-games-index & {
+        margin-top: 130px;
+    }
 }
 
 .new-game {
