Fix button margins

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -14,8 +14,9 @@ input[type="submit"] {
         color: #000;
         border: 4px solid #000;
         border-radius: 2px;
-        padding: 4px 12px;
+        padding: 4px 8px;
         margin: -8px 0;
+        margin-right: 10px;
     }
 
     &:hover {
