--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,7 +1,21 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 100%;
-    font-weight: 500;
+    /* font-weight: 500; /* FIXME */
+    line-height: 1;
+}
+
+p, table {
+    margin: 0.5em 0;
+}
+
+td {
+    text-align: left;
+    padding-right: 0.4em;
+    padding-top: 0.5em;
+    tr:first-child & {
+        padding-top: 0;
+    }
 }
 
 a,
@@ -12,6 +26,7 @@ input[type="submit"] {
         text-decoration: none;
         background: transparent;
         color: #000;
+        font-weight: bold;
         border: 4px solid #000;
         border-radius: 2px;
         padding: 4px 8px;
@@ -48,7 +63,7 @@ input[type="submit"] {
     }
 }
 
-.new-game {
+form.new-game {
     display: inline;
 }
 
@@ -70,4 +85,8 @@ input[type="submit"] {
         margin-top: -4px;
         background-color: #fff;
     }
+}
+
+#page-games-index .statistics {
+    margin-top: 3em;
 }
