Tweak horizontal centering

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -44,7 +44,7 @@ input[type="submit"] {
 }
 
 .container {
-    width: 768px;
+    width: 650px; // door image width * 3 - empty vertical space in the image
     margin: 50px auto 0;
 }
 
@@ -99,7 +99,7 @@ form.new-game {
 }
 
 .door-container {
-    margin-left: -39px;
+    margin: 0 -38px;
     display: flex;
 }
 
