--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,6 +1,10 @@
+html {
+    font-size: 100%;
+}
+
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 100%;
+    font-size: 1.3em;
 }
 
 p, table {
@@ -30,8 +34,8 @@ input[type="submit"] {
         vertical-align: middle;
         border: 4px solid #000;
         border-radius: 2px;
-        padding: 4px 8px;
-        margin-right: 10px;
+        padding: 0.25em 0.5em;
+        margin-right: 0.625em;
     }
 
     &:hover {
