--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,9 +1,11 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:700,600,400);
+
 html {
     font-size: 100%;
 }
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.3em;
 }
 
@@ -63,10 +65,6 @@ input[type="submit"] {
     margin-top: -4px;
 }
 
-#page-games-index .statistics {
-    margin-top: 3em;
-}
-
 #game-head {
     height: 8em;
     margin-bottom: 2.25em;
@@ -86,7 +84,7 @@ input[type="submit"] {
     }
 
     p {
-        font-weight: 500;
+        font-weight: 600;
     }
 
     h1 {
